2009-05-09  Sebastien Pouliot  <sebastien@ximian.com>

	* WebHeaderCollection_2_1.cs: When associated with a WebRequest 
	the header collection items needs to be validated since not all
	headers will be valid. Part of fix for DRT#532

2009-04-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* HttpWebRequest_2_1.cs: Rework the throwing of NIE so gui-compare
	does not report them (since they are the "right" behavior)
	* WebClient_2_1.cs: Fix BaseAddress property to return the URI to 
	the XAP file. Implement protected GetWebRequest which will make an
	absolute URI from a relative one (using BaseAddress). That remove
	the need of the previous hack.
	* WebRequest_2_1.cs: Remove previous hack

2009-04-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* WebClient_2_1.cs: WebClient allows relative URI...
	* WebRequest_2_1.cs: ...while WebRequest does not by default. 
	Also uncomment a few checks for new test cases

2009-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* DnsEndPoint_2_1.cs: Adjust exceptions wrt unit tests
	* HttpWebRequest_2_1.cs: Fix Headers property wrt unit tests: 
	* WebClient_2_1.cs: Fix some properties
	* WebHeaderCollection_2_1.cs: Adjust exceptions wrt unit tests
	* WebRequest_2_1.cs: Add RegisterPrefix functionality and add
	missing checks (fix unit tests)

2009-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* DnsEndPoint_2_1.cs: Fix header.
	* HttpStatusCode_2_1.cs: New. SL2 (short) version of the enum
	* HttpWebRequest_2_1.cs: Add missing members
	* WebExceptionStatus_2_1.cs: New. SL2 (short) version of the enum
	* WebHeaderCollection_2_1.cs: Implement S.C.IEnumerable

2009-03-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebClient_2_1.cs: OnOpenReadCompleted and OnDownloadStringCompleted:
	make sure we don't pass any exceptions back to native code.

2009-03-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebClient_2_1.cs: Stub out missing methods.
	* WriteStreamClosedEventArgs_2_1.cs: 
	* WriteStreamClosedEventHandler_2_1.cs: Added.
